--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ celerybeat-schedule
 .venv
 venv/
 ENV/
+__venv__/
 
 # Spyder project settings
 .spyderproject
@@ -99,3 +100,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# pycharm
+.idea
